02-hnc/parent-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    team: analytics
    hnc.x-k8s.io/included-namespace: "true"
